Dark mode form fix

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -317,6 +317,7 @@ input[type=text], input[type=search] {
 	color: var(--text);
 	display: block;
 	height: auto;
+	background: var(--blockquote);
 }
 
 input[type=submit], button {
